[tool.poetry]
name = "frattlesnack"
version = "0.1.0"
description = ""
authors = ["Sam Gaus <sam@gaus.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pulp = "^2.3"
frattlesnake = {path = "../frattlesnake"}
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
